--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: Welcome to my homepage!
-description : I am at an early stage of creating my website. This is just a template. Bookmark this page and please visit soon.
+description : Home page under progress, Bookmsrk this and visit soon!
